--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -50,7 +50,7 @@
 		"timonwong.shellcheck",
 	],
 
-	"waitFor": "postCreateCommand",
+	//"waitFor": "postCreateCommand",
 
 	// Use 'onCreateCommand' to run commands as part of container creation.
 	"onCreateCommand": "/bin/bash -c .devcontainer/on-create.sh",
