--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,13 +47,13 @@
 		"gruntfuggly.todo-tree",
 		"mutantdino.resourcemonitor",
 		"humao.rest-client",
-		"timonwong.shellcheck",
+		"timonwong.shellcheck"
 	],
 
 	//"waitFor": "postCreateCommand",
 
 	// Use 'onCreateCommand' to run commands as part of container creation.
-	"onCreateCommand": "/bin/bash -c .devcontainer/on-create.sh",
+	"onCreateCommand": "/bin/bash -c .devcontainer/on-create.sh"
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "/bin/bash -c .devcontainer/post-create.sh",
