--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,7 @@
 	"forwardPorts": [
 		30000,
 		30080,
+		30081,
 		31080,
 		32000
 	],
@@ -34,6 +35,7 @@
 	"portsAttributes": {
 		"30000": { "label": "Prometheus" },
 		"30080": { "label": "IMDb App" },
+		"30081": { "label": "RidoHubProxy" },
 		"31080": { "label": "Heartbeat" },
 		"32000": { "label": "Grafana" }
 	},
