--- a/ridohubproxy.yaml
+++ b/ridohubproxy.yaml
@@ -14,20 +14,36 @@ spec:
     spec:
       containers:
       - name: ridohubproxy
-        image: ghcr.io/ridomin/ridohubproxy:v01
+        image: ghcr.io/ridomin/ridohubproxy:v02
         ports:
-        - containerPort: 80
+        - name: http
+          containerPort: 8081
+          protocol: TCP
         env:
         - name: ConnectionStrings__hub
           value: "HostName=ridoext.azure-devices.net;SharedAccessKeyName=iothubowner;SharedAccessKey=iamt3G6gMflQqkBatPD3ZZrTDB24VkjOhUmH0yXscIA="
+        - name: ASPNETCORE_URLS
+          value: http://+:8081
+
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: ridohubproxy
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
-  - port: 80
+  - port: 8081
+    nodePort: 30081
+    targetPort: http
+    protocol: TCP
+    name: http
   selector:
     app: ridohubproxy
