--- a/ridohubproxy.yaml
+++ b/ridohubproxy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: ridohubproxy
-        image: ghcr.io/ridomin/ridohubproxy:v02
+        image: k3d-registry.localhost:5500/ridohubproxy:latest
         ports:
         - name: http
           containerPort: 8081
