add vscode settings

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,7 +34,7 @@
 	// add labels
 	"portsAttributes": {
 		"30000": { "label": "Prometheus" },
-		"30080": { "label": "IMDb App" },
+		"30080": { "label": "RidoBrokerProxy" },
 		"30081": { "label": "RidoHubProxy" },
 		"31080": { "label": "Heartbeat" },
 		"32000": { "label": "Grafana" }
