--- a/pnp-memmon-hub/appsettings.json
+++ b/pnp-memmon-hub/appsettings.json
@@ -3,6 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Warning"
+    },
+    "Console": {
+      "FormatterName": "Simple",
+      "FormatterOptions": {
+        "SingleLine" :  true
+      }
     }
   }
 }
