--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file pnp-memmon-hub/Dockerfile --tag ghcr.io/ridomin/pnp-memmon-hub:$(date +%s
+      run: docker build . --file pnp-memmon-hub/Dockerfile --tag ghcr.io/ridomin/pnp-memmon-hub:$(date +%s)
