--- a/.github/workflows/iotux-docker.yaml
+++ b/.github/workflows/iotux-docker.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "master" ]
     paths: 
-      - 'pnp-memon-hub/**'
+      - 'IoTUX/**'
   pull_request:
     branches: [ "master" ]
 
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file pnp-memmon-hub/Dockerfile --tag ghcr.io/ridomin/pnp-memmon-hub:latest
+      run: docker build . --file IoTUX/Dockerfile --tag ghcr.io/ridomin/iotux:latest
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
