--- a/.github/workflows/iotux-docker.yaml
+++ b/.github/workflows/iotux-docker.yaml
@@ -25,4 +25,4 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.REGISTRY_TOKEN }}
     - name: push image
-      run: docker push ghcr.io/ridomin/pnp-memmon-hub:latest
+      run: docker push ghcr.io/ridomin/iotux:latest
