enable app insights

--- a/IoTUX/appsettings.json
+++ b/IoTUX/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=c4730fb0-df0c-4342-8bf3-42f57659da86;IngestionEndpoint=https://eastus2-3.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus2.livediagnostics.monitor.azure.com/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
