--- a/IoTUX/IoTUX.csproj
+++ b/IoTUX/IoTUX.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Azure.Devices" Version="1.37.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+	<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
   </ItemGroup>
 
 </Project>
