--- a/pnp-memmon-hive/pnp-memmon-hive.csproj
+++ b/pnp-memmon-hive/pnp-memmon-hive.csproj
@@ -10,8 +10,9 @@
 	<ItemGroup>
 		<PackageReference Include="Humanizer" Version="2.14.1" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.16.1" />
-		<PackageReference Include="Rido.Mqtt.AzIoTClient" Version="0.0.15" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+		<PackageReference Include="Rido.Mqtt.Client" Version="0.0.10" />
+		<PackageReference Include="Rido.Mqtt.MqttNet4Adapter" Version="0.0.10" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -20,8 +21,14 @@
 		</Compile>
 	</ItemGroup>
 	<ItemGroup>
-		<Compile Update="Idtmi_rido_pnp_memmon-1.g.cs">
+		<Compile Update="Imemmon.cs">
 			<DependentUpon>dtmi_rido_pnp_memmon-1.json</DependentUpon>
 		</Compile>
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <None Update="memmon1.pfx">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 </Project>
