add appinsights to hive

--- a/pnp-memmon-hive/appsettings.json
+++ b/pnp-memmon-hive/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=58726fb6-2401-4953-b1e4-7965dffb270c;IngestionEndpoint=https://westus3-1.in.applicationinsights.azure.com/"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.Hosting.Lifetime": "Warning"
     }
   }
