--- a/pnp-memmon-hive/pnp-memmon-hive.csproj
+++ b/pnp-memmon-hive/pnp-memmon-hive.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Humanizer" Version="2.14.1" />
+		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.20.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
 		<PackageReference Include="Rido.Mqtt.Client" Version="0.0.10" />
