--- a/pnp-memmon-hive/appsettings.json
+++ b/pnp-memmon-hive/appsettings.json
@@ -4,8 +4,14 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Warning"
+    },
+    "Console": {
+      "FormatterName": "Simple",
+      "FormatterOptions": {
+        "SingleLine": true
+      }
     }
   }
 }
