--- a/aks-deployments/aznorthbound.yaml
+++ b/aks-deployments/aznorthbound.yaml
@@ -17,9 +17,7 @@ spec:
         image: ghcr.io/ridomin/ridoaznorthbound:latest
         env:
         - name: ConnectionStrings__cs
-          value: HostName=10.0.50.186;UserName=a;Password=b;ClientId=NorthBoundConnector;TcpPort=1883;UseTls=false
+          value: HostName=mqttbroker-svc;ClientId=NorthBoundConnector;TcpPort=1883;UseTls=false
         - name: APPLICATIONINSIGHTS_CONNECTION_STRING
           value: InstrumentationKey=065bcb1a-bf6d-43c8-b541-e374a92b082a;IngestionEndpoint=https://westus3-1.in.applicationinsights.azure.com/
-      hostNetwork: false
-      dnsPolicy: Default
         
