--- a/aks-deployments/e4k-device.yaml
+++ b/aks-deployments/e4k-device.yaml
@@ -1,23 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: broker-device
+  name: e4k-device
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: broker-device
+      app: e4k-device
   template:
     metadata:
       labels:
-        app: broker-device
+        app: e4k-device
     spec:
       containers:
-      - name: broker-device
+      - name: e4k-device
         image: ghcr.io/ridomin/pnp-memmon-hive:latest
         env:
         - name: ConnectionStrings__cs
-          value: HostName=m;UserName=demo1;Password=passs;ClientId=machinename;TcpPort=1883;UseTls=false
-      hostNetwork: false
-      dnsPolicy: Default
-        
+          value: HostName=mqttbroker-svc;TcpPort=1883;UseTls=false
