--- a/.github/workflows/mm-broker-docker.yml
+++ b/.github/workflows/mm-broker-docker.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "master" ]
     paths: 
-      - 'pnp-memmon-hive/**'
+      - 'pnp-memmon-broker/**'
   
 
 jobs:
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file pnp-memmon-hive/Dockerfile --tag ghcr.io/ridomin/pnp-memmon-hive:latest
+      run: docker build . --file pnp-memmon-broker/Dockerfile --tag ghcr.io/ridomin/pnp-memmon-broker:latest
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
@@ -24,4 +24,4 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.REGISTRY_TOKEN }}
     - name: push image
-      run: docker push ghcr.io/ridomin/pnp-memmon-hive:latest
+      run: docker push ghcr.io/ridomin/pnp-memmon-broker:latest
