--- a/aks-deployments/broker-device.yaml
+++ b/aks-deployments/broker-device.yaml
@@ -14,10 +14,10 @@ spec:
     spec:
       containers:
       - name: broker-device
-        image: ghcr.io/ridomin/pnp-memmon-hive:latest
+        image: ghcr.io/ridomin/pnp-memmon-broker:latest
         env:
         - name: ConnectionStrings__cs
-          value: HostName=m;UserName=demo1;Password=passs;ClientId=machinename;TcpPort=1883;UseTls=false
+          value: HostName=mosquitto-service;TcpPort=1883;UseTls=false
       hostNetwork: false
       dnsPolicy: Default
         
