--- a/pnp-memmon-broker/pnp-memmon-broker.csproj
+++ b/pnp-memmon-broker/pnp-memmon-broker.csproj
@@ -8,12 +8,12 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Humanizer" Version="2.14.1" />
+		<PackageReference Include="Humanizer.Core" Version="2.14.1" />
 		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.16.1" />
-		<PackageReference Include="Rido.Mqtt.Client" Version="0.1.2" />
-		<PackageReference Include="Rido.Mqtt.MqttNet4Adapter" Version="0.1.2" />
+		<PackageReference Include="Rido.Mqtt.Client" Version="0.1.3" />
+		<PackageReference Include="Rido.Mqtt.MqttNet4Adapter" Version="0.1.3" />
 	</ItemGroup>
 	
 	<ItemGroup>
