--- a/aks-deployments/hive-device.yaml
+++ b/aks-deployments/hive-device.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hive-device
+  name: hive-device-depl
 spec:
-  replicas: 4
+  replicas: 2
   selector:
     matchLabels:
       app: hive-device
@@ -13,10 +13,15 @@ spec:
         app: hive-device
     spec:
       containers:
-      - name: hive-device
+      - name: hive-device-pod
         image: ghcr.io/ridomin/pnp-memmon-broker:latest
         env:
         - name: ConnectionStrings__cs
-          value: HostName=f8826e3352314ca98102cfbde8aff20e.s2.eu.hivemq.cloud;UserName=demo1;Password=MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDA1;ClientId=memmon2
-      
-        
+          value: HostName=f8826e3352314ca98102cfbde8aff20e.s2.eu.hivemq.cloud;UserName=demo1;Password=MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDA1
+        resources:
+          requests:
+            memory: "32Mi"
+            cpu: "1000m"
+          limits:
+            memory: "128Mi"
+            cpu: "1500m"
