--- a/memmon/memmon.csproj
+++ b/memmon/memmon.csproj
@@ -12,17 +12,18 @@
 		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.16.1" />
+		<PackageReference Include="Rido.Mqtt.AzIoTClient" Version="0.1.3" />
 		<PackageReference Include="Rido.Mqtt.Client" Version="0.1.3" />
 		<PackageReference Include="Rido.Mqtt.MqttNet4Adapter" Version="0.1.3" />
 	</ItemGroup>
-	
 	<ItemGroup>
-		<Compile Update="dtmi_rido_pnp_memmon-1.g.cs">
+		<Compile Update="dtmi_rido_pnp_memmon-1.mqtt.g.cs">
 			<DependentUpon>dtmi_rido_pnp_memmon-1.json</DependentUpon>
 		</Compile>
-	</ItemGroup>
-	<ItemGroup>
-		<Compile Update="Imemmon.cs">
+		<Compile Update="dtmi_rido_pnp_memmon-1.hub.g.cs">
+			<DependentUpon>dtmi_rido_pnp_memmon-1.json</DependentUpon>
+		</Compile>
+		<Compile Update="dtmi_rido_pnp_memmon-1.g.cs">
 			<DependentUpon>dtmi_rido_pnp_memmon-1.json</DependentUpon>
 		</Compile>
 	</ItemGroup>
