--- a/.github/workflows/memmon-docker.yml
+++ b/.github/workflows/memmon-docker.yml
@@ -1,21 +1,18 @@
-name: mm hub Docker Image CI
+name: memmon Docker Image CI
 
 on:
   push:
     branches: [ "master" ]
     paths: 
-      - 'pnp-memmon-hub/**'
+      - 'memmon/**'
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file pnp-memmon-hub/Dockerfile --tag ghcr.io/ridomin/pnp-memmon-hub:latest
+      run: docker build . --file memmon/Dockerfile --tag ghcr.io/ridomin/memmon:latest
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
@@ -23,4 +20,4 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.REGISTRY_TOKEN }}
     - name: push image
-      run: docker push ghcr.io/ridomin/pnp-memmon-hub:latest
+      run: docker push ghcr.io/ridomin/memmon:latest
