--- a/aks-deployments/central-device.yaml
+++ b/aks-deployments/central-device.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: central-device
-        image: ghcr.io/ridomin/pnp-memmon-hub:latest
+        image: ghcr.io/ridomin/memmon:latest
         env:
         - name: ConnectionStrings__cs
           value: IdScope=0ne006CAFFC;SasMinutes=100;SharedAccessKey=invalid
