--- a/aks-deployments/e4k-device.yaml
+++ b/aks-deployments/e4k-device.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: e4k-device
-        image: ghcr.io/ridomin/pnp-memmon-broker:latest
+        image: ghcr.io/ridomin/memmon:latest
         env:
         - name: ConnectionStrings__cs
           value: HostName=mqttbroker-svc;TcpPort=1883;UseTls=false
