--- a/aks-deployments/hive-device.yaml
+++ b/aks-deployments/hive-device.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: hive-device-pod
-        image: ghcr.io/ridomin/pnp-memmon-broker:latest
+        image: ghcr.io/ridomin/memmon:latest
         env:
         - name: ConnectionStrings__cs
           value: HostName=f8826e3352314ca98102cfbde8aff20e.s2.eu.hivemq.cloud;UserName=demo1;Password=MDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDA1
