--- a/.github/workflows/memmon-docker.yml
+++ b/.github/workflows/memmon-docker.yml
@@ -2,7 +2,7 @@ name: memmon Docker Image CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "dev" ]
     paths: 
       - 'memmon/**'
 
