--- a/nuget.config
+++ b/nuget.config
@@ -8,8 +8,8 @@
   </packageSources>
   <packageSourceCredentials>
     <gpr>
-        <add key="Username" value="ridomin" />
-        <add key="ClearTextPassword" value="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" />
+        <add key="Username" value="ghnouser" />
+        <add key="ClearTextPassword" value="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" />
     </gpr>
   </packageSourceCredentials>
 </configuration>
