--- a/nuget.config
+++ b/nuget.config
@@ -4,12 +4,6 @@
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->
     <clear />
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
-    <add key="gpr" value="https://nuget.pkg.github.com/ridomin/index.json" />
+    <add key="myget" value="https://www.myget.org/F/ridopackages/api/v3/index.json" />
   </packageSources>
-  <packageSourceCredentials>
-    <gpr>
-        <add key="Username" value="ghnouser" />
-        <add key="ClearTextPassword" value="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" />
-    </gpr>
-  </packageSourceCredentials>
 </configuration>
