--- a/.github/workflows/memmon-docker.yml
+++ b/.github/workflows/memmon-docker.yml
@@ -3,6 +3,7 @@ name: memmon Docker Image CI
 on:
   push:
     branches: [ "master", "dev" ]
+    tags: ['v.*']
     paths: 
       - 'memmon/**'
 
@@ -18,6 +19,6 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.REGISTRY_TOKEN }}
     - name: Build the Docker image
-      run: docker build . --file memmon/Dockerfile --tag ghcr.io/ridomin/memmon:latest
+      run: docker build . --file memmon/Dockerfile --tag ghcr.io/ridomin/memmon:$(git rev-parse --abbrev-ref HEAD | sed 's/[^a-zA-Z0-9]/-/g')
     - name: push image
       run: docker push ghcr.io/ridomin/memmon:latest
