--- a/memmon/appsettings.json
+++ b/memmon/appsettings.json
@@ -10,7 +10,7 @@
     "Console": {
       "FormatterName": "Simple",
       "FormatterOptions": {
-        "SingleLine": true
+        "SingleLine": false
       }
     }
   }
