--- a/Rido.AzNorthBound/appsettings.json
+++ b/Rido.AzNorthBound/appsettings.json
@@ -7,7 +7,7 @@
     "Console": {
       "FormatterName": "Simple",
       "FormatterOptions": {
-        "SingleLine": true
+        "SingleLine": false
       }
     }
   }
