--- a/memmon/memmon.csproj
+++ b/memmon/memmon.csproj
@@ -11,9 +11,9 @@
 		<PackageReference Include="Humanizer.Core" Version="2.14.1" />
 		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.16.1" />
-		<PackageReference Include="Rido.Mqtt.AzIoTClient" Version="*" />
-		<PackageReference Include="Rido.Mqtt.Client" Version="*" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+		<PackageReference Include="Rido.Mqtt.AzIoTClient" Version="0.3.*" />
+		<PackageReference Include="Rido.Mqtt.Client" Version="0.3.*" />
 	</ItemGroup>
 	
 	<ItemGroup>
