--- a/aks-deployments/mosquitto-ca.yaml
+++ b/aks-deployments/mosquitto-ca.yaml
@@ -8,36 +8,36 @@ data:
 
     listener 1883
     allow_anonymous false
-    password_file /mosquitto/config/passwords.txt
+    password_file /mosquitto/secrets/passwords.txt
 
     listener 8883
     allow_anonymous false
-    password_file /mosquitto/config/passwords.txt
+    password_file /mosquitto/secrets/passwords.txt
     require_certificate false
-    cafile /mosquitto/certs/ca.crt
-    certfile /mosquitto/certs/localhost.pem
-    keyfile /mosquitto/certs/localhost.priv.key
+    cafile /mosquitto/secrets/tls.crt
+    certfile /mosquitto/secrets/tls.pem
+    keyfile /mosquitto/secrets/tls.key
 
     listener 8884
     require_certificate true
     use_identity_as_username true
-    cafile /mosquitto/certs/ca.crt
-    certfile /mosquitto/certs/localhost.pem
-    keyfile /mosquitto/certs/localhost.priv.key
+    cafile /mosquitto/secrets/tls.crt
+    certfile /mosquitto/secrets/tls.pem
+    keyfile /mosquitto/secrets/tls.key
 
     listener 8080
     allow_anonymous false
-    password_file /mosquitto/config/passwords.txt
+    password_file /mosquitto/secrets/passwords.txt
     protocol websockets
     http_dir wwwroot
 
     listener 8443
     allow_anonymous false
-    password_file /mosquitto/config/passwords.txt
+    password_file /mosquitto/secrets/passwords.txt
     protocol websockets
-    cafile /mosquitto/certs/ca.crt
-    certfile /mosquitto/certs/localhost.pem
-    keyfile /mosquitto/certs/localhost.priv.key
+    cafile /mosquitto/secrets/tls.crt
+    certfile /mosquitto/secrets/tls.pem
+    keyfile /mosquitto/secrets/tls.key
 
 ---
 apiVersion: apps/v1
@@ -65,21 +65,16 @@ spec:
           - containerPort: 8443
           volumeMounts:
           - name: mosquitto-conf
-            mountPath: /mosquitto/config/mosquitto.config
-          - name: mosquitto-passwords
-            mountPath: /mosquitto/config/passwords.txt
-          - name: mosquitto-tls
-            mountPath: /mosquitto/certs
+            mountPath: /mosquitto/config
+          - name: mosquitto-secrets
+            mountPath: /mosquitto/secrets
       volumes:
       - name: mosquitto-conf
         configMap:
           name: my-mosquitto-config-file
-      - name: mosquitto-tls
+      - name: mosquitto-secrets
         secret:
-          secretName: my-mosquitto-certs
-      - name: mosquitto-passwords
-        secret:
-          secretName: my-mosquitto-passwords
+          secretName: my-mosquitto-secrets
 ---
 apiVersion: v1
 kind: Service
