--- a/memmon/memmon.csproj
+++ b/memmon/memmon.csproj
@@ -12,9 +12,9 @@
 		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
-		<PackageReference Include="MQTTnet.Extensions.MultiCloud.AwsIoTClient" Version="0.1.3-gf1686a1ff2" />
-		<PackageReference Include="MQTTnet.Extensions.MultiCloud.AzureIoTClient" Version="0.1.3-gf1686a1ff2" />
-		<PackageReference Include="MQTTnet.Extensions.MultiCloud.BrokerIoTClient" Version="0.1.3-gf1686a1ff2" />
+		<PackageReference Include="MQTTnet.Extensions.MultiCloud.AwsIoTClient" Version="0.0.24-g45cd619e34" />
+		<PackageReference Include="MQTTnet.Extensions.MultiCloud.AzureIoTClient" Version="0.0.24-g45cd619e34" />
+		<PackageReference Include="MQTTnet.Extensions.MultiCloud.BrokerIoTClient" Version="0.0.24-g45cd619e34" />
 	</ItemGroup>
 	
 	<ItemGroup>
