--- a/aks-deployments/broker-device.yaml
+++ b/aks-deployments/broker-device.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: broker-device
-        image: ghcr.io/ridomin/memmon:x64
+        image: ghcr.io/iotmodels/memmon:x64
         env:
         - name: ConnectionStrings__cs
           value: HostName=mosquitto-service;TcpPort=1883;UseTls=false;Username=client2;Password=Pass@Word2
