--- a/Rido.AzNorthBound/Rido.AzNorthBound.csproj
+++ b/Rido.AzNorthBound/Rido.AzNorthBound.csproj
@@ -14,6 +14,6 @@
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.21.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
-    <PackageReference Include="Rido.Mqtt.MqttNet4Adapter" Version="0.3.2" />
+    <PackageReference Include="MQTTnet.Extensions.MultiCloud" Version="0.2.21" />
   </ItemGroup>
 </Project>
